// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider activeColor 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": "#ee0a24",
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider barHeight 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": "2px",
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider button 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="custom-button"
      >
        button
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider button is function 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "0%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="custom-button"
      >
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider buttonSize 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider inactiveColor 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": "#e9e9e9",
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider max 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider min 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider shallows correctly 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider should render left button and right button correctly under rang mode 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "20%",
        "width": "60%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--left"
      key="0"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="custom-button"
      >
        leftButton
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={80}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      key="1"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="custom-button"
      >
        rightButton
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider step 1`] = `
<div
  className="rc-slider"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "height": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "left": "0%",
        "width": "NaN%",
      }
    }
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Slider vertical 1`] = `
<div
  className="rc-slider rc-slider--vertical"
  onClick={[Function]}
  style={
    Object {
      "background": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="rc-slider__bar"
    style={
      Object {
        "background": undefined,
        "height": "NaN%",
        "top": "0%",
      }
    }
  >
    <div
      aria-orientation="vertical"
      aria-valuemax={100}
      aria-valuemin={0}
      className="rc-slider__button-wrapper rc-slider__button-wrapper--right"
      onClick={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="slider"
      tabIndex={0}
    >
      <div
        className="rc-slider__button"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;
